--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -22,7 +22,8 @@
     />
   </head>
   <body>
-    <div class="col-2 sidebar">
+    <!-- <div class="col-2 sidebar"> -->
+    <div class="sidebar">
       <div class="logo">
         <h4>Management</h4>
       </div>
@@ -31,7 +32,7 @@
         <p>
           <span
             ><i class="fa-solid fa-table-cells"></i>
-            <a href="Dashboard.html"> Dashboard</a></span
+            <a href="../Dashboard.html" target="_top"> Dashboard</a></span
           >
         </p>
         <!-- <p><span><i class="fa-solid fa-bars"></i> Class</span></p> -->
@@ -41,20 +42,21 @@
             <i class="fa-solid fa-table-cells"></i> Banner
           </button>
           <!-- <div class="dropdown-content" id="classDropdown">
-                        <a href="Manageclass.html">Manage Class</a>
-                        <a href="Managesection.html">Manage Section</a>
-                        <a href="Managesubject.html">Manage Subject</a>
-                    </div> -->
+                            <a href="Manageclass.html">Manage Class</a>
+                            <a href="Managesection.html">Manage Section</a>
+                            <a href="Managesubject.html">Manage Subject</a>
+                        </div> -->
         </div>
         <div class="sidebaritems">
           <div class="dropdown">
             <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
             <button class="dropbtn" onclick="toggleDropdown()">
-              <i class="fa-solid fa-table-cells"></i> Category
+              <i class="fa-solid fa-table-cells"></i>
+              <a href="../Category/Category.html" target="_top">Category</a>
             </button>
             <!-- <div class="dropdown-content" id="classDropdown">
-                            <a href="#">Manage Student</a>
-                        </div> -->
+                                <a href="#">Manage Student</a>
+                            </div> -->
           </div>
         </div>
         <div class="sidebaritems">
@@ -64,8 +66,8 @@
               <i class="fa-solid fa-table-cells"></i> Coupon
             </button>
             <!-- <div class="dropdown-content" id="classDropdown">
-                            <a href="#">Manage Teacher</a>
-                        </div> -->
+                                <a href="#">Manage Teacher</a>
+                            </div> -->
           </div>
         </div>
 
@@ -89,5 +91,8 @@
         </div>
       </div>
     </div>
+    <!-- </div> -->
+    <script src="../Script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
