--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -24,67 +24,68 @@
   <body>
     <!-- <div class="col-2 sidebar"> -->
     <div class="sidebar">
-      <div class="logo">
-        <h4>Management</h4>
+      <div class="logo bold ">
+        <h3>Management</h3>
+        <h3>Dashboard</h3>
+        <!-- <h4>DASHBOARD</h4> -->
       </div>
       <div class="sidebaritems">
-        <h3>DASHBOARD</h3>
-        <p>
-          <span
-            ><i class="fa-solid fa-table-cells"></i>
-            <a href="../Dashboard.html" target="_top"> Dashboard</a></span
-          >
-        </p>
-        <!-- <p><span><i class="fa-solid fa-bars"></i> Class</span></p> -->
-        <div class="dropdown">
-          <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
-          <button class="dropbtn" onclick="toggleDropdown()">
-            <i class="fa-solid fa-table-cells"></i> Banner
-          </button>
-          <!-- <div class="dropdown-content" id="classDropdown">
-                            <a href="Manageclass.html">Manage Class</a>
-                            <a href="Managesection.html">Manage Section</a>
-                            <a href="Managesubject.html">Manage Subject</a>
-                        </div> -->
-        </div>
         <div class="sidebaritems">
           <div class="dropdown">
-            <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
             <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-solid fa-table-cells"></i>
-              <a href="../Category/Category.html" target="_top">Category</a>
+              <a href="../Dashboard.html" target="_top">Dashboard</a>
             </button>
-            <!-- <div class="dropdown-content" id="classDropdown">
-                                <a href="#">Manage Student</a>
-                            </div> -->
           </div>
         </div>
         <div class="sidebaritems">
           <div class="dropdown">
-            <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
             <button class="dropbtn" onclick="toggleDropdown()">
-              <i class="fa-solid fa-table-cells"></i> Coupon
+              <i class="fa-solid fa-flag"></i>
+              <a href="../Banner/Banner.html" target="_top">Banner</a>
             </button>
-            <!-- <div class="dropdown-content" id="classDropdown">
-                                <a href="#">Manage Teacher</a>
-                            </div> -->
           </div>
         </div>
-
         <div class="sidebaritems">
           <div class="dropdown">
-            <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
             <button class="dropbtn" onclick="toggleDropdown()">
-              <i class="fa-solid fa-table-cells"></i> Transactions
+              <i class="fa-solid fa-barcode"></i>
+              <a href="/Category/Category.html" target="_top">Category</a>
+            </button>
+          </div>
+        </div>
+        <div class="sidebaritems">
+          <div class="dropdown">
+            <button class="dropbtn" onclick="toggleDropdown()">
+              <i class="fa-solid fa-ticket"></i>
+              <a href="../Coupon/Coupon.html" target="_top">Coupon</a>
+            </button>
+          </div>
+        </div>
+        <div class="sidebaritems">
+          <div class="dropdown">
+            <button class="dropbtn" onclick="toggleDropdown()">
+              <i class="fa-solid fa-handshake"></i>
+              <a href="#">Transactions</a> 
+              <!-- <a href="../Transaction/transaction.html" target="_top">Transactions</a> -->
             </button>
             <div class="dropdown-content" id="classDropdown"></div>
           </div>
         </div>
         <div class="sidebaritems">
           <div class="dropdown">
-            <!-- Use JavaScript to toggle the dropdown when the button is clicked -->
             <button class="dropbtn" onclick="toggleDropdown()">
-              <i class="fa-solid fa-table-cells"></i> Users
+              <i class="fa-solid fa-user"></i>
+              <a href="../Users/Users.html" target="_top">Users</a>
+            </button>
+            <div class="dropdown-content" id="classDropdown"></div>
+          </div>
+        </div>
+        <div class="sidebaritems">
+          <div class="dropdown">
+            <button class="dropbtn" onclick="toggleDropdown()">
+              <i class="fa-solid fa-truck"></i>
+              <a href="../Orders/OrderDetail.html" target="_top">Order Details</a>
             </button>
             <div class="dropdown-content" id="classDropdown"></div>
           </div>
@@ -92,6 +93,23 @@
       </div>
     </div>
     <!-- </div> -->
+    <script>
+      // Get the current URL
+var url = window.location.href;
+console.log(url);
+// Get all the links in the sidebar
+var links = document.querySelectorAll('.sidebaritems a');
+console.log(links);
+// Loop through each link and check if it matches the current URL
+for (var i = 0; i < links.length; i++) {
+  // if (links[i].href === url) {
+  if ( url.includes(links[i].href)) {
+    // Add a class to the corresponding tab
+    links[i].classList.add('highlight');
+  }
+}
+
+    </script>
     <script src="../Script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
   </body>
