--- a/Layout/style.css
+++ b/Layout/style.css
@@ -1,3 +1,54 @@
+.sidebar button {
+    cursor: pointer;
+    padding: 0;
+  border: none;
+}
+
+.sidebar a {
+  text-decoration: none;
+  color: black;
+}
+.sidebar img {
+  vertical-align: bottom;
+}
+.sidebar ::placeholder {
+  color: #ffffff; /* You can adjust the color code as needed */
+}
+.sidebar :disabled {
+  cursor: not-allowed;
+}
+
+.sidebar .dropbtn {
+  background-color: transparent;
+  color: rgb(0, 0, 0);
+
+  border: none;
+  cursor: pointer;
+}
+.sidebar .dropbtn i{
+  width: 10px;
+}
+
+/* Style the dropdown links */
+.sidebar .dropdown a {
+  color: black;
+  padding: 5px 6px;
+  text-decoration: none;
+  display: block;
+  font-size: 16px;
+}
+
+.sidebar .highlight{
+  font-weight: bolder;
+}
+
+.sidebar .sidebaritems .dropdown button {
+  display: flex;
+  justify-content: left;
+  gap: 15px;
+  align-items: center;
+}
+
 .sidebar {
   background: #edf2f6;
   padding: 10px;
@@ -6,6 +57,7 @@
 }
 .sidebar .logo {
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 .sidebar .sidebaritems {
   margin-bottom: 10px;
