--- a/Style.css
+++ b/Style.css
@@ -5,6 +5,7 @@
 }
 a {
   text-decoration: none;
+  color: black;
 }
 img {
   vertical-align: bottom;
@@ -134,6 +135,9 @@ body {
 
   border: none;
   cursor: pointer;
+}
+.dropbtn i{
+  width: 10px;
 }
 .table-box {
   border: 2px solid #ccc;
@@ -270,9 +274,10 @@ body {
 }
 .sidebar .logo {
   margin-bottom: 20px;
+  margin-top: 20px;
 }
 .sidebar .sidebaritems {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 .sidebar .sidebaritems h3 {
   margin-bottom: 10px;
