--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -24,6 +24,9 @@
   <body>
     <!-- <div class="col-2 sidebar"> -->
     <div class="sidebar">
+      <div>
+        <i class="fa-solid fa-gear fa-2xl"></i>
+      </div>
       <div class="logo bold ">
         <h3>Management</h3>
         <h3>Dashboard</h3>
