worked on integrating apis

--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -60,6 +60,14 @@
         <div class="sidebaritems">
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
+              <i class="fa-solid fa-barcode"></i>
+              <a href="/SubCategory/subCategory.html" target="_top">Sub Category</a>
+            </button>
+          </div>
+        </div>
+        <div class="sidebaritems">
+          <div class="dropdown">
+            <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-solid fa-ticket"></i>
               <a href="../Coupon/Coupon.html" target="_top">Coupon</a>
             </button>
