--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,500;0,700;0,800;1,100;1,300;1,500;1,700&family=Roboto:ital,wght@0,100;0,700;1,100;1,300;1,400;1,500&display=swap");
+
 /* Basic Css  */
 * {
   margin: 0;
@@ -34,7 +36,9 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font: 16px/1.2 "Montserrat", sans-serif;
+  /* font: 16px/1.2 "Montserrat", sans-serif; */
+  font-size: 16px/1.2;
+  font-family: "Poppins", sans-serif;;
 }
 .thin {
   font-weight: 100;
@@ -47,12 +51,14 @@ body {
 .container {
   max-width: 1600px;
   margin: auto;
-  padding: 0 1rem;
+  padding: 0;
+  /* padding: 0 1rem; */
 }
 .row {
   display: flex;
   flex-flow: row wrap;
-  margin: 0 -1rem;
+  /* margin: 0 -1rem; */
+  margin: 0;
 }
 [class^="col-"] {
   flex: 1 0 auto;
@@ -186,6 +192,12 @@ body {
   text-align: center;
   height: 100vh;
 }
+.login_box .error-message{
+  font-size: 16px;
+  padding: 1rem;
+  color: black;
+}
+
 .login_box {
   border: 2px solid black;
   position: absolute;
