--- a/Style.css
+++ b/Style.css
@@ -38,7 +38,7 @@ html {
 body {
   /* font: 16px/1.2 "Montserrat", sans-serif; */
   font-size: 16px/1.2;
-  font-family: "Poppins", sans-serif;;
+  font-family: "Poppins", sans-serif;
 }
 .thin {
   font-weight: 100;
@@ -192,7 +192,7 @@ body {
   text-align: center;
   height: 100vh;
 }
-.login_box .error-message{
+.login_box .error-message {
   font-size: 16px;
   padding: 1rem;
   color: black;
