added delete dialog

--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -21,7 +21,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body style="position: fixed; top: 0;">
     <!-- <div class="col-2 sidebar"> -->
     <div class="sidebar">
       <div>
