--- a/Layout/style.css
+++ b/Layout/style.css
@@ -9,8 +9,8 @@
   margin: 0;
   width: 250px;
   /* position: sticky; */
-  /* position: sticky; */
-  /* top: 0; */
+  position: sticky;
+  top: 0;
 }
 
 .sidebar a {
@@ -72,6 +72,7 @@
   padding: 10px;
   color: #000000;
   height: 800px;
+  /* height: 100%;  */
 }
 .sidebar .logo {
   margin-bottom: 20px;
