added the mobile blocker to all pages

--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -20,8 +20,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="/blockMobile.js"></script>
   </head>
-  <body style="position: fixed; top: 0;">
+  <body style="position: fixed; top: 0">
     <!-- <div class="col-2 sidebar"> -->
     <div class="sidebar">
       <div>
@@ -109,9 +110,7 @@
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-brands fa-product-hunt"></i>
-              <a href="../Product/Product.html" target="_top"
-                >Product</a
-              >
+              <a href="../Product/Product.html" target="_top">Product</a>
             </button>
             <div class="dropdown-content" id="classDropdown"></div>
           </div>
