--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -62,11 +62,20 @@
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-solid fa-divide"></i>
-              <a href="/SubCategory/subCategory.html" target="_top"
-                >Sub Category</a
+              <a href="/Book/book.html" target="_top"
+                >Book</a
               >
             </button>
           </div>
+          <div class="sidebaritems">
+            <div class="dropdown">
+              <button class="dropbtn" onclick="toggleDropdown()">
+                <i class="fa-solid fa-divide"></i>
+                <a href="/Ebook/ebook.html" target="_top"
+                  >EBook</a
+                >
+              </button>
+            </div>
         </div>
         <div class="sidebaritems">
           <div class="dropdown">
