--- a/Style.css
+++ b/Style.css
@@ -422,8 +422,13 @@ body {
     left: 200px;
   }
 }
+.btnadd a {
+  text-decoration: none;
+  color: black;
+}
 .btnadd {
   background-color: #d7f0da;
+  color: #fff;
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
@@ -467,4 +472,10 @@ body {
   .admin_box p {
     font-size: 20px;
   }
+}
+
+#pagination button {
+  padding: 8px;
+  border: 1px solid rgb(220, 220, 220);
+  border-radius: 100%;
 }
