--- a/Style.css
+++ b/Style.css
@@ -390,7 +390,9 @@ body {
     max-width: 50%;
   }
   .sidebar {
-    position: absolute;
+    /* position: absolute; */
+    position: sticky;
+  top: 0;
     top: 0;
     left: -1000px;
     max-width: 409px;
