--- a/Layout/style.css
+++ b/Layout/style.css
@@ -68,7 +68,7 @@
 }
 
 .sidebar {
-  background: #edf2f6;
+  background: #d8ecfc4e;
   padding: 10px;
   color: #000000;
   height: 800px;
@@ -77,7 +77,7 @@
   /* height: 100%;  */
 }
 .sidebar .logo {
-  margin-bottom: 20px;
+
   margin-top: 20px;
   font-weight: bold;
 }
