--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -62,21 +62,33 @@
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-solid fa-divide"></i>
-              <a href="/Book/book.html" target="_top"
-                >Book</a
-              >
+              <a href="/Book/book.html" target="_top">Book</a>
             </button>
           </div>
+        </div>
+
+        <div class="sidebaritems">
           <div class="sidebaritems">
             <div class="dropdown">
               <button class="dropbtn" onclick="toggleDropdown()">
                 <i class="fa-solid fa-divide"></i>
-                <a href="/Ebook/ebook.html" target="_top"
-                  >EBook</a
-                >
+                <a href="/Ebook/ebook.html" target="_top">EBook</a>
               </button>
             </div>
+          </div>
         </div>
+
+        <div class="sidebaritems">
+          <div class="sidebaritems">
+            <div class="dropdown">
+              <button class="dropbtn" onclick="toggleDropdown()">
+                <i class="fa-solid fa-divide"></i>
+                <a href="/News/news.html" target="_top">News</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
         <div class="sidebaritems">
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
