--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -56,6 +56,15 @@
         <div class="sidebaritems">
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
+              <i class="fa-solid fa-user"></i>
+              <a href="../Aboutus/aboutus.html" target="_top">About Us</a>
+            </button>
+            <div class="dropdown-content" id="classDropdown"></div>
+          </div>
+        </div>
+        <div class="sidebaritems">
+          <div class="dropdown">
+            <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-solid fa-flag"></i>
               <a href="../Banner/Banner.html" target="_top">Banner</a>
             </button>
@@ -124,6 +133,15 @@
               <a href="../Orders/OrderDetail.html" target="_top"
                 >Order Details</a
               >
+            </button>
+            <div class="dropdown-content" id="classDropdown"></div>
+          </div>
+        </div>
+        <div class="sidebaritems">
+          <div class="dropdown">
+            <button class="dropbtn" onclick="toggleDropdown()">
+              <i class="fa-solid fa-user"></i>
+              <a href="../Terms & Conditions/aboutus.html" target="_top">Terms & Conditions</a>
             </button>
             <div class="dropdown-content" id="classDropdown"></div>
           </div>
