--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -108,6 +108,17 @@
         </div>
 
         <div class="sidebaritems">
+          <div class="sidebaritems">
+            <div class="dropdown">
+              <button class="dropbtn" onclick="toggleDropdown()">
+                <i class="fa-solid fa-divide"></i>
+                <a href="/Courses/Courses.html" target="_top">Courses</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="sidebaritems">
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-solid fa-ticket"></i>
@@ -141,7 +152,9 @@
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-solid fa-user"></i>
-              <a href="../Terms & Conditions/aboutus.html" target="_top">Terms & Conditions</a>
+              <a href="../Terms & Conditions/aboutus.html" target="_top"
+                >Terms & Conditions</a
+              >
             </button>
             <div class="dropdown-content" id="classDropdown"></div>
           </div>
