--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -119,6 +119,28 @@
         </div>
 
         <div class="sidebaritems">
+          <div class="sidebaritems">
+            <div class="dropdown">
+              <button class="dropbtn" onclick="toggleDropdown()">
+                <i class="fa-solid fa-divide"></i>
+                <a href="/Video/video.html" target="_top">Video</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="sidebaritems">
+          <div class="sidebaritems">
+            <div class="dropdown">
+              <button class="dropbtn" onclick="toggleDropdown()">
+                <i class="fa-solid fa-divide"></i>
+                <a href="/Pdf/pdf.html" target="_top">PDFs</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="sidebaritems">
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-solid fa-ticket"></i>
