--- a/Courses/table.css
+++ b/Courses/table.css
@@ -48,8 +48,8 @@
   min-width: 100%;
   max-width: 100%;
 }
-.table.table-bordered tr,
-.table.table-bordered td {
+.table.tableLong tr,
+.table.tableLong td {
   width: 100%;
 }
 #table-video {
