--- a/Style.css
+++ b/Style.css
@@ -133,7 +133,7 @@ body {
   position: relative;
   display: inline-block;
 }
-.card-body{
+.card-body {
   background-color: #0fff273c;
 }
 
@@ -395,7 +395,7 @@ body {
   .sidebar {
     /* position: absolute; */
     position: sticky;
-  top: 0;
+    top: 0;
     top: 0;
     left: -1000px;
     max-width: 409px;
@@ -483,4 +483,9 @@ body {
   padding: 8px;
   border: 1px solid rgb(220, 220, 220);
   border-radius: 100%;
+}
+
+#editPopup .popup-container {
+  width: 80%; /* You can adjust the percentage to your desired width */
+  max-width: 500px; /* You can also set a maximum width if needed */
 }
