--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -81,7 +81,7 @@
         <div class="sidebaritems">
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
-              <i class="fa-solid fa-divide"></i>
+              <i class="fa-solid fa-book"></i>
               <a href="/Book/book.html" target="_top">Book</a>
             </button>
           </div>
@@ -90,7 +90,7 @@
         <div class="sidebaritems">
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
-              <i class="fa-solid fa-divide"></i>
+              <i class="fa-regular fa-file"></i>
               <a href="/Ebook/ebook.html" target="_top">EBook</a>
             </button>
           </div>
@@ -100,7 +100,7 @@
           <div class="sidebaritems">
             <div class="dropdown">
               <button class="dropbtn" onclick="toggleDropdown()">
-                <i class="fa-solid fa-divide"></i>
+                <i class="fa-solid fa-newspaper"></i>
                 <a href="/News/news.html" target="_top">News</a>
               </button>
             </div>
@@ -122,7 +122,7 @@
           <div class="sidebaritems">
             <div class="dropdown">
               <button class="dropbtn" onclick="toggleDropdown()">
-                <i class="fa-solid fa-divide"></i>
+                <i class="fa-solid fa-video"></i>
                 <a href="/Video/video.html" target="_top">Video</a>
               </button>
             </div>
@@ -133,8 +133,30 @@
           <div class="sidebaritems">
             <div class="dropdown">
               <button class="dropbtn" onclick="toggleDropdown()">
-                <i class="fa-solid fa-divide"></i>
+                <i class="fa-solid fa-file-pdf"></i>
                 <a href="/Pdf/pdf.html" target="_top">PDFs</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="sidebaritems">
+          <div class="sidebaritems">
+            <div class="dropdown">
+              <button class="dropbtn" onclick="toggleDropdown()">
+                <i class="fa-solid fa-feather"></i>
+                <a href="/Tests/tests.html" target="_top">Test</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="sidebaritems">
+          <div class="sidebaritems">
+            <div class="dropdown">
+              <button class="dropbtn" onclick="toggleDropdown()">
+                <i class="fa-solid fa-feather"></i>
+                <a href="/PETOnline/pet.html" target="_top">PET</a>
               </button>
             </div>
           </div>
