added scroll on the sidebar

--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -107,7 +107,7 @@
           </div>
         </div>
 
-        <div class="sidebaritems">
+        <!-- <div class="sidebaritems">
           <div class="sidebaritems">
             <div class="dropdown">
               <button class="dropbtn" onclick="toggleDropdown()">
@@ -116,7 +116,7 @@
               </button>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="sidebaritems">
           <div class="sidebaritems">
