--- a/Layout/style.css
+++ b/Layout/style.css
@@ -11,6 +11,8 @@
   /* position: sticky; */
   position: sticky;
   top: 0;
+  max-height: 100vh;
+  overflow-y: auto;
 }
 
 .sidebar a {
@@ -77,7 +79,6 @@
   /* height: 100%;  */
 }
 .sidebar .logo {
-
   margin-top: 20px;
   font-weight: bold;
 }
