--- a/Style.css
+++ b/Style.css
@@ -293,6 +293,9 @@ body {
   position: sticky;
   top: 0;
   height: 100vh;
+  /* overflow-y: auto; */
+  /* overflow: scroll; */
+  /* max-width: 100vh; */
   /* left: 0; */
   /* width: 250px; */
 }
