--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -163,6 +163,17 @@
         </div>
 
         <div class="sidebaritems">
+          <div class="sidebaritems">
+            <div class="dropdown">
+              <button class="dropbtn" onclick="toggleDropdown()">
+                <i class="fa-solid fa-feather"></i>
+                <a href="/Quize/quiz.html" target="_top">Quiz</a>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="sidebaritems">
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-solid fa-ticket"></i>
