work on solving issues

--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -56,7 +56,7 @@
         <div class="sidebaritems">
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
-              <i class="fa-solid fa-user"></i>
+              <i class="fa-solid fa-info"></i>
               <a href="../Aboutus/aboutus.html" target="_top">About Us</a>
             </button>
             <div class="dropdown-content" id="classDropdown"></div>
@@ -155,7 +155,7 @@
           <div class="sidebaritems">
             <div class="dropdown">
               <button class="dropbtn" onclick="toggleDropdown()">
-                <i class="fa-solid fa-feather"></i>
+                <i class="fa-solid fa-flag"></i>
                 <a href="/PETOnline/pet.html" target="_top">PET</a>
               </button>
             </div>
@@ -166,7 +166,7 @@
           <div class="sidebaritems">
             <div class="dropdown">
               <button class="dropbtn" onclick="toggleDropdown()">
-                <i class="fa-solid fa-feather"></i>
+                <i class="fa-solid fa-q"></i>
                 <a href="/Quize/quiz.html" target="_top">Quiz</a>
               </button>
             </div>
@@ -234,6 +234,7 @@
       }
     </script>
     <script src="../Script.js"></script>
+    <script src="../logout.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
