change the name again to Ebook

--- a/Layout/DashboardSidebar.html
+++ b/Layout/DashboardSidebar.html
@@ -91,7 +91,7 @@
           <div class="dropdown">
             <button class="dropbtn" onclick="toggleDropdown()">
               <i class="fa-regular fa-file"></i>
-              <a href="/ebook/ebook.html" target="_top">EBook</a>
+              <a href="/Ebook/ebook.html" target="_top">EBook</a>
             </button>
           </div>
         </div>
